images added - some css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
   </head>
   <body>
     <img src="./img/batman.png" alt="" id="batmanImg" />
+    <img src="./img/app.jpg" alt="" id="appImg" />
+
+
+    <img src="./img/star.png" alt="" id="starImg" />
+
+    <img src="./img/osama.png" alt="" id="osamaImg" />
+    <img src="./img/tesla.png" alt="" id="teslaImg" />
+    <img src="./img/maklobeh.png" alt="" id="maklobehImg" />
+    <a href="">  <img class="txtHover" src="./img/who.png" alt="" id="whoImg" /></a>
+  
+    <img class="txtHover" src="./img/mash.png" alt="" id="mashImg" />
+    <img class="txtHover" src="./img/twasal.png" alt="" id="twasalImg" />
+
+    <img src="./img/sun.png" alt="" id="sunImg" />
+    <img src="./img/solar.png" alt="" id="solarImg" />
+
+
+    <img src="./img/cam.gif" alt="" id="camImg" />
+
 
     <footer id="footerF">
       <h3 id="linkToInspieredBy">
